topics/navigateToFlowFromLWC/main/default/objects/Deal_Escalation__c/Deal_Escalation__c.object-meta.xml
<CustomObject>
    <label>Deal Escalation</label>
    <nameField>
        <displayFormat>DealEscalation-{0000}</displayFormat>
        <label>Deal Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals Escalation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>