topics/navigateToFlowFromLWC/main/default/objects/Deal_Escalation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deals Escalation</relationshipLabel>
    <relationshipName>Deals_Escalation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>