topics/navigateToFlowFromLWC/main/default/objects/Deal_Escalation__c/fields/Requested_Discount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount__c</fullName>
    <label>Requested Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>