topics/navigateToFlowFromLWC/main/default/objects/Deal_Escalation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Submitted&quot;</defaultValue>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>